# DGIIM

./: README.md
Mención-ComputacionYSistemasInteligentes/Metaheuristicas/: Tablas_MDD_2024-25.xls
Mención-ComputacionYSistemasInteligentes/Metaheuristicas/P1-ProblemaMinimaDispersion/: CMakeCache.txt  Makefile  Tablas_MDD_2024-25.xls  cmake_install.cmake  compile_commands.json  main  main.cpp  results.csv  results.txt  results2.csv  results2.txt  results3.csv
SegundoCurso/Algorítmica/practica2_dyv/: INFO_AJUSTES  README.md
SegundoCurso/Algorítmica/practica3_greedy/: README.md
SegundoCurso/Algorítmica/practica3_greedy/ algoritmo_comerciante/: CMakeLists.txt  generador-pvc.cpp  pvc1.cpp  pvc2.cpp  pvc3.cpp
SegundoCurso/Algorítmica/practica4_grafos/: README.md
SegundoCurso/EstructurasdeDatos/Ej01_Imagenes-master/: CMakeLists.txt  juez.sh
SegundoCurso/EstructurasdeDatos/Ej02_Pilas_y_Colas-master/: juez.sh
SegundoCurso/EstructurasdeDatos/Ej03_TDAs_No_Lineales-master/: .gitignore  CMakeLists.txt  juez.sh
SegundoCurso/EstructurasdeDatos/p04_juego_letras-master/: .gitignore  CMakeLists.txt
TercerCurso(Salerno)/IngegneriaSoftware/scientific-calculator-complex-numbers/: .gitignore  nbactions.xml  pom.xml
TercerCurso(Salerno)/ProgrammazioneConcorrentePallelaeSuCloud/lab4/: bug-1  bug-1.c  lab4-1  lab4-1.c  lab4-2  lab4-2.c  lab4-3.1.c  lab4-3.2.c  lab4-3.3.c  lab4-4.h  main-lab4-4  main-lab4-4.c
TercerCurso(Salerno)/ProgrammazioneConcorrentePallelaeSuCloud/lab5/: bug-2  bug-2.c  lab5-1  lab5-1.c  lab5-2  lab5-2.c  ring  ring.c
(+232 files in other folders)
